--- a/index (1).html
+++ b/index (1).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Clone</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://github.com/PreethRavani/netflix-clone/blob/main/styles.css">
 </head>
 <body>
     <!-- Header -->
@@ -213,6 +213,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="https://github.com/PreethRavani/netflix-clone/blob/main/script.js"></script>
 </body>
 </html>
